--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ProjectIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>OrbitWCE</title>
     <script async src="https://docs.opencv.org/4.5.5/opencv.js" type="text/javascript"></script>
   </head>
   <body>
